--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,21 @@
 <body>
   <div id="form-wrap">
     <form>
-      
+      <fieldset>
+        <h4>Contact Me:</h4>
+          <label class="labelone" for="name">Name: </label>
+          <input name="name"/>
+          <label for="email">Email: </label>
+          <input name="email"/>
+          <label for="phone">Phone number:</label>
+          <input name="phone"/>
+          <label for="comments">Comments: </label>
+          <textarea name="comments"></textarea>
+      </fieldset>
+      <fieldset>
+        <input class="btn" type="submit" value="Send Email"/>
+        <input class="btn" type="reset" value="Reset Form"/>
+      </fieldset>  
     </form>
   </div>
   <canvas id="qr-code"</canvas>
