implemmenting post request

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="form-wrap">
-    <form>
+    <form action="/" method="POST">
       <fieldset>
         <h4>Contact Me:</h4>
           <label class="labelone" for="name">Name: </label>
