added in qrcode library, routing for qrurl

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
           <textarea name="comments"></textarea>
       </fieldset>
       <fieldset>
-        <input class="btn" type="submit" value="Send Email"/>
+        <input class="btn" type="submit" value="Submit"/>
         <input class="btn" type="reset" value="Reset Form"/>
       </fieldset>  
     </form>
